tests/Rules/Forms/Fixtures/valid/input_with_autocomplete.html.twig
<form>
  <input type="email" name="email" autocomplete="email">
</form>
