tests/Rules/Forms/Fixtures/invalid/input_missing_autocomplete.html.twig
<form>
  <input type="email" name="email">
</form>
